persistindo uma refeição
